# Generating-Slide

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  show_graph.ipynb  test.py  workflow.py
models/: LLMs.py  images.py  slides.py  visualize_slides.py
nodes/: create_presentation.py  create_slides.py  decide_layout.py  describe_images.py  enhance_slides_position.py
rules/: image_rules.txt  slide_rules.txt
states/: PresentationState.py
utils/: handoff.py  search.py
